--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,34 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
- </web-app>
+  <servlet>
+    <description></description>
+    <display-name>MainController</display-name>
+    <servlet-name>MainController</servlet-name>
+    <servlet-class>com.poscoict.mysite.controller.MainController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MainController</servlet-name>
+    <url-pattern>/MainController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MainController1</display-name>
+    <servlet-name>MainController1</servlet-name>
+    <servlet-class>com.poscoict.mysite.controller.MainController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MainController1</servlet-name>
+    <url-pattern>/main</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UserController</display-name>
+    <servlet-name>UserController</servlet-name>
+    <servlet-class>com.poscoict.mysite.controller.UserController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserController</servlet-name>
+    <url-pattern>/user</url-pattern>
+  </servlet-mapping>
+</web-app>
