--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>MainController1</servlet-name>
-    <url-pattern>/main</url-pattern>
+    <url-pattern></url-pattern>
   </servlet-mapping>
   <servlet>
     <description></description>
