--- a/mysite02/src/main/webapp/WEB-INF/web.xml
+++ b/mysite02/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,7 @@
   <listener>
     <listener-class>com.poscoict.web.listener.ContextLoadListener</listener-class>
   </listener>
+  
   <filter>
     <filter-name>EncodingFilter</filter-name>
     <filter-class>com.poscoict.web.filter.EncodingFilter</filter-class>
@@ -20,6 +21,7 @@
     <filter-name>EncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
   <servlet>
     <description></description>
     <display-name>MainController</display-name>
@@ -27,7 +29,7 @@
     <servlet-class>com.poscoict.mysite.controller.MainController
 		</servlet-class>
     <init-param>
-      <param-name>config</param-name>
+      <param-name>contextConfigLocation</param-name>
       <param-value>/WEB-INF/servlet-context.xml</param-value>
     </init-param>
   </servlet>
