--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -45,7 +45,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+	    
+	    <!-- Spring Aspect -->
+		<dependency>
+		    	<groupId>org.springframework</groupId>
+		    	<artifactId>spring-aspects</artifactId>
+		    	<version>${org.springframework-version}</version>
+		</dependency>
+	    
 		<!-- Spring MVC -->
 		<dependency>
 			<groupId>org.springframework</groupId>
