--- a/mysite02/pom.xml
+++ b/mysite02/pom.xml
@@ -9,16 +9,37 @@
 	</parent>
 	<artifactId>mysite02</artifactId>
 	<packaging>war</packaging>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.17</version>
 		</dependency>
+		
+				<!-- JDBC -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>2.7.4</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>mysite02</finalName>
-	</build>	
+		<plugins>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>tomcat-maven-plugin</artifactId>
+			<version>1.1</version>
+			<configuration>
+				<url>http://127.0.0.1:8080/manager/text</url>
+				<path>/mysite02</path>
+				<username>admin</username>
+				<password>manager</password>
+			</configuration>
+		</plugin>
+		</plugins>
+	</build>
+
 </project>
