--- a/mysite04/src/main/webapp/WEB-INF/web.xml
+++ b/mysite04/src/main/webapp/WEB-INF/web.xml
@@ -7,14 +7,18 @@
 
 
 	<context-param>
+		<param-name>contextClass</param-name>
+		<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+	</context-param>
+
+	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml</param-value>
+		<param-value>com.poscoict.mysite.config.AppConfig</param-value>
 	</context-param>
 
 	<!-- Context Load Listener -->
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 	<!-- Encoding Filter -->
@@ -37,10 +41,16 @@
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet
 		</servlet-class>
+		
+		<init-param>
+		<param-name>contextClass</param-name>
+		<param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring-servlet.xml</param-value>
+			<param-value>com.poscoict.mysite.config.WebConfig</param-value>
 		</init-param>
+		
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
