--- a/mysite04/src/main/resources/com/poscoict/mysite/config/app/jdbc.properties
+++ b/mysite04/src/main/resources/com/poscoict/mysite/config/app/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.DriverClassName=org.mariadb.jdbc.Driver
+jdbc.driverClassName=org.mariadb.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.0.57:3307/webdb?characterEncoding=UTF-8&serverTimezone=UTC
 jdbc.username=webdb
 jdbc.password=webdb
