--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 				<version>3.2.1</version>
 				<configuration>
 					<warSourceDirectory>${project.basedir}/src/main/webapp</warSourceDirectory>
-					<failOnMissingWebXml>true</failOnMissingWebXml>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -60,6 +60,7 @@
 		<module>mysite02</module>
 		<module>mysite03</module>
 		<module>mysite04</module>
+		<module>mysite05</module>
 	</modules>
 
 
