war 배포 and mysite06 마무리

--- a/mysite06/src/main/resources/__application.properties
+++ b/mysite06/src/main/resources/__application.properties
@@ -12,7 +12,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # http
-spring.http.encoding.character=utf-8
+spring.http.encoding.charset=utf-8
 spring.http.encoding.enabled=true
 spring.http.encoding.forced=false
 spring.http.encoding.forced-request=false
@@ -30,9 +30,18 @@ spring.datasource.maxActive=20
 mybatis.config-location=classpath:mybatis/configuration.xml
 
 # message resource(Internationalization)
+spring.messages.always-message-format=true
+spring.messages.basename=messages/messages_ko
+spring.messages.encoding=UTF-8
 
 # multipart
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 
-# aop
+# aop (@EnableAspectJAutoProxy)
+spring.aop.auto=true
+spring.aop.proxy-target-class=true
 
 # logging
+logging.config=classpath:logback.xml
