--- a/mysite03/pom.xml
+++ b/mysite03/pom.xml
@@ -141,7 +141,14 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
-
+		
+		
+		<!-- jacksno, ajax -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
