--- a/mysite04/pom.xml
+++ b/mysite04/pom.xml
@@ -128,7 +128,14 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>2.7.4</version>
 		</dependency>
-
+		
+		<!-- jacksno, ajax -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>	
+		
 		<!-- Logback -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
