--- a/mysite06/pom.xml
+++ b/mysite06/pom.xml
@@ -105,6 +105,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+				<!-- jacksno, ajax -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>	
+		
 	</dependencies>
 	
 	<build>
